# demo_adam_yaml

./: .coverage  .gitignore  CLAUDE.md  README.md  demo.py  functions.py  generate_adsl_demo.py  pyproject.toml  run_tests.py  test_column_structure.py  test_full_join_approach.py  test_modern_typing.py  test_simplified_columns.py
.github/workflows/: docs.yml
adamyaml/: __init__.py
adamyaml/adam_derivation/: CLAUDE.md  __init__.py  engine.py
adamyaml/adam_derivation/derivations/: README.md  __init__.py  aggregation.py  base.py  categorization.py  condition.py  constant.py  custom.py  function_derivation.py  source.py  sql_derivation.py
adamyaml/adam_derivation/functions/: __init__.py
adamyaml/adam_derivation/loaders/: sdtm_loader.py
adamyaml/adam_derivation/utils/: logger.py
adamyaml/adam_spec/: adam_spec.py  merge_yaml.py  schema_validator.py
adamyaml/adam_spec/tests/: __init__.py  test_adam_spec.py  test_merge_yaml.py  test_schema_validator.py
adamyaml/adam_validation/: data_validator.py
adsl/: adsl_common.yaml  adsl_project.yaml  adsl_study.yaml
data/adam/: adae.parquet  adlbc.parquet  adlbh.parquet  adlbhy.parquet  adqsadas.parquet  adqscibc.parquet  adqsnpix.parquet  adsl.parquet  adtte.parquet  advs.parquet
data/adam_study1/: .gitignore  adsl.parquet
data/adam_validate/: adqscibc.parquet  advs.parquet
data/sdtm/: ae.parquet  cm.parquet  dm.parquet  ds.parquet  ex.parquet  lb.parquet  mh.parquet  qs.parquet  relrec.parquet  sc.parquet  se.parquet  suppae.parquet  suppdm.parquet  suppds.parquet  supplb.parquet  sv.parquet  ta.parquet  te.parquet  ti.parquet  ts.parquet  tv.parquet  vs.parquet
docs/: README.md  _quarto.yml  _sidebar.yml  api.qmd  example_adsl.qmd  example_adsl_simple.qmd  index.qmd  requirements.txt
examples/: example_adsl.qmd
script/: example_adsl.py  example_adsl.qmd  prepare_data.py  requirements.txt
spec/: CLAUDE.md  adsl_common.yaml  adsl_project.yaml  adsl_study.yaml  adsl_study1.yaml  adsl_study2.yaml  adsl_study_combined.yaml  adsl_study_combined1.yaml  adsl_study_combined2.yaml  schema.yaml
spec/organization/: adsl_common.yaml
spec/study1/: adsl_study1.yaml  final_adsl_study1.yaml
spec/study2/: adsl_study2.yaml  final_adsl_study2.yaml
src/adam_derivation/: __init__.py  engine.py
src/adam_derivation/derivations/: aggregation.py  base.py  categorization.py  condition.py  custom.py
src/adam_derivation/functions/: get_bmi.py
src/adam_derivation/loaders/: __init__.py  (+2 more)
src/adam_spec/: adam_spec.py
src/adam_validation/: __init__.py
src/adam_yaml/: README.md  __init__.py  adam_spec.py  adam_yaml.py  handler.py  loader.py  merge_yaml.py  merger.py  models.py  schema.yaml  schema_validator.py  validator.py
(+10 files in other folders)
